--- a/style.css
+++ b/style.css
@@ -4,14 +4,41 @@
 }
 
 body {
-    background-color: #0a0a0a;
+    background-color: beige;
 }
 
 h1 {
     font-family: 'Jost', sans-serif;
-    color: #fff;
+    color: #000;
 }
 
 .container {
-    padding: 30px;
+    padding: 50px;
+    margin-top: 100px;
+    text-align: center;
+}
+
+span {
+    display: inline-block;
+    font-size: 50px;
+    color: #000;
+  }
+  
+.fadewave {
+    --delay: 0s;
+    animation: fadewave 1s;
+    animation-delay: calc(var(--delay) * 0.05s);
+    animation-timing-function: cubic-bezier(0.17, 0.67, 0.85, 1.10);
+    animation-fill-mode: both;
+}
+
+@keyframes fadewave {
+    0% {
+        transform: translateY(220px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
